# cafe

./: .env.example  .gitignore  README.md  docker-compose.init.yml  docker-compose.migration.yml  docker-compose.yml  example.env  pyproject.toml
backup/: Dockerfile  cleanup.sh  cronjob  db_backup.sh  db_restore.sh
collector/: Dockerfile  pyproject.toml
collector/collector/: bs4_parser.py  comparsion_helper.py  config.py  db_service.py  est_handler.py  exceptions.py  ig_extractor.py  inst_api.py  llm.py  message_service.py  scheduler.py  selenium_manager.py  session.py  source_service.py  tg_extractor.py  tg_manager.py  ymap_parser.py
migrations/: env.py
migrations/versions/: 2bae45462706_init.py  init_seed.sql
shared/: logging_config.py
shared/models/: db.py  models.py  task.py
tg_bot/: Dockerfile  pyproject.toml
tg_bot/tg_bot/: bot.py  usecase.py
tg_sessions/: session.py
