[project]
name = "collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.15.1",
    "beautifulsoup4>=4.13.3",
    "cryptography>=44.0.2",
    "hikerapi>=1.6.6",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.11",
    "lxml>=5.3.1",
    "ormar>=0.20.2",
    "pymysql>=1.1.1",
    "rapidfuzz>=3.12.2",
    "schedule>=1.2.2",
    "selenium>=4.29.0",
    "telethon>=1.39.0",
    "unidecode>=1.3.8",
]
